--- a/modules/experiences/client/views/list-experiences.client.view.html
+++ b/modules/experiences/client/views/list-experiences.client.view.html
@@ -2,94 +2,109 @@
   <div class="page-header">
     <h1>Experiences</h1>
   </div>
-  <div>
-    <h3>Filters</h3>
-    <div class="row">
-      <div class="col-md-4">
-        <label class="control-label">Period</label>
-        <div class="input-group form-group">
-          <input type="text" id="fromDate" name="fromDate" class="form-control"
-                 datepicker-popup="{{format}}"
-                 ng-model="filter.startDate" is-open="status.openedStart"
-                 datepicker-options="datePickerOptions" close-text="Close" disabled
-                 placeholder="Start Date"/>
-          <span class="input-group-btn">
-            <button type="button" class="btn btn-default" ng-click="openStart($event)" title="Choose start date">
-              <i class="glyphicon glyphicon-calendar"></i>
-            </button>
-          </span>
+  <div ng-show="initialCount > 0">
+    <div id="filterSection" class="col-md-12">
+      <h3>Filters</h3>
+      <!--<div class="row">-->
+        <div class="col-md-4">
+          <label class="control-label">Period</label>
+          <div class="input-group form-group">
+            <input type="text" id="fromDate" name="fromDate" class="form-control"
+                   datepicker-popup="{{format}}"
+                   ng-model="filter.startDate" is-open="status.openedStart"
+                   datepicker-options="datePickerOptions" close-text="Close" disabled
+                   placeholder="Start Date"/>
+            <span class="input-group-btn">
+              <button type="button" class="btn btn-default" ng-click="openStart($event)" title="Choose start date">
+                <i class="glyphicon glyphicon-calendar"></i>
+              </button>
+            </span>
+          </div>
+          <div class="input-group form-group">
+            <input type="text" id="endDate" name="endDate" class="form-control"
+                   datepicker-popup="{{format}}"
+                   ng-model="filter.endDate" is-open="status.openedEnd"
+                   datepicker-options="datePickerOptions" close-text="Close" disabled
+                   placeholder="End Date"/>
+                <span class="input-group-btn">
+                  <button type="button" class="btn btn-default" ng-click="openEnd($event)" title="Choose end date">
+                    <i class="glyphicon glyphicon-calendar"></i>
+                  </button>
+                </span>
+          </div>
         </div>
-        <div class="input-group form-group">
-          <input type="text" id="endDate" name="endDate" class="form-control"
-                 datepicker-popup="{{format}}"
-                 ng-model="filter.endDate" is-open="status.openedEnd"
-                 datepicker-options="datePickerOptions" close-text="Close" disabled
-                 placeholder="End Date"/>
-              <span class="input-group-btn">
-                <button type="button" class="btn btn-default" ng-click="openEnd($event)" title="Choose end date">
-                  <i class="glyphicon glyphicon-calendar"></i>
-                </button>
-              </span>
+        <div class="col-md-4">
+          <label for="mediaFilter" class="control-label">Media</label>
+          <select name="multipleSelect" id="mediaFilter" ng-model="filter.media" multiple class="form-control input-group">
+            <option ng-repeat="medium in media" value="{{medium._id}}">{{medium.name}}</option>
+          </select>
+        </div>
+        <div class="col-md-4">
+          <label for="search" class="control-label">Search</label>
+          <input type="text" id="search" name="search" class="form-control"
+                 ng-model="filter.search" placeholder="Search in all text fields"/>
+        </div>
+      <!--</div>-->
+    </div>
+    <div id="nothingFoundSection" class="col-md-12" ng-show="experiences.length === 0">
+      <div class="alert alert-info" role="alert">
+        No experiences found.
+      </div>
+    </div>
+    <div id="listSection" class="col-md-12" ng-show="experiences && experiences.length > 0"  style="top:20px;">
+      <!-- header section -->
+      <div class="row">
+        <div class="col-md-8">
+          <div ng-show="experiences && experiences.length > 1">
+            <span>Found {{experiences.length}} experiences.</span>
+          </div>
+          <div ng-show="experiences && experiences.length === 1">
+            <span>Found 1 experience.</span>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <ul class="nav nav-pills pull-right">
+            <li class="active"><a href="#">Table</a></li>
+            <li><a href="#">Map</a></li>
+          </ul>
         </div>
       </div>
-      <div class="col-md-4">
-        <label for="mediaFilter" class="control-label">Media</label>
-        <select name="multipleSelect" id="mediaFilter" ng-model="filter.media" multiple class="form-control input-group">
-          <option ng-repeat="medium in media" value="{{medium._id}}">{{medium.name}}</option>
-        </select>
-      </div>
-      <div class="col-md-4">
-        <label for="search" class="control-label">Search</label>
-        <input type="text" id="search" name="search" class="form-control"
-               ng-model="filter.search" placeholder="Search in all text fields"/>
-      </div>
-    </div>
-    <div class="row" ng-show="experiences && experiences.length > 0">
-      Found {{experiences.length}} experiences.
-    </div>
-    <div class="row" ng-show="!experiences || experiences.length === 0">
-      No experiences from search result.
-    </div>
-  </div>
-  <div>
-    <ul class="nav nav-tabs">
-      <li class="active"><a href="#">Table</a></li>
-      <li><a href="#">Map</a></li>
-    </ul>
-  </div>
 
-    <div>
-      <!-- table with sorting and pagination code from:
-   * http://stackoverflow.com/questions/19409492/how-to-achieve-pagination-table-layout-with-angular-js
-   * http://code.ciphertrick.com/2015/06/01/search-sort-and-pagination-ngrepeat-angularjs/-->
-      <table class="table table-striped table-condensed table-hover">
-        <thead>
-        <tr>
-          <th ng-click="sortBy('date')">Date
-            <span class="glyphicon sort-icon" ng-show="sort.sortingKey=='date'"
-                  ng-class="{'glyphicon-chevron-up':sort.reverse,'glyphicon-chevron-down':!sort.reverse}"></span>
-          </th>
-          <th ng-click="sortBy('medium.name')">Medium
-            <span class="glyphicon sort-icon" ng-show="sort.sortingKey=='medium.name'"
-                  ng-class="{'glyphicon-chevron-up':sort.reverse,'glyphicon-chevron-down':!sort.reverse}"></span>
-          </th>
-          <th ng-click="sortBy('title')">Title
-            <span class="glyphicon sort-icon" ng-show="sort.sortingKey=='title'"
-                  ng-class="{'glyphicon-chevron-up':sort.reverse,'glyphicon-chevron-down':!sort.reverse}"></span>
-          </th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr ng-repeat="experience in experiences | orderBy:sort.sortingKey:sort.reverse"
-            ui-sref="experiences.view({experienceId: experience._id})">
-          <td>{{experience.date | date : 'dd/MM/yyyy'}}</td>
-          <td>{{experience.medium.name}}</td>
-          <td>{{experience.title}}</td>
-        </tr>
-        </tbody>
-      </table>
+      <!-- content section -->
+      <div>
+        <!-- table with sorting and pagination code from:
+     * http://stackoverflow.com/questions/19409492/how-to-achieve-pagination-table-layout-with-angular-js
+     * http://code.ciphertrick.com/2015/06/01/search-sort-and-pagination-ngrepeat-angularjs/-->
+        <table class="table table-striped table-condensed table-hover">
+          <thead>
+          <tr>
+            <th ng-click="sortBy('date')">Date
+              <span class="glyphicon sort-icon" ng-show="sort.sortingKey=='date'"
+                    ng-class="{'glyphicon-chevron-up':sort.reverse,'glyphicon-chevron-down':!sort.reverse}"></span>
+            </th>
+            <th ng-click="sortBy('medium.name')">Medium
+              <span class="glyphicon sort-icon" ng-show="sort.sortingKey=='medium.name'"
+                    ng-class="{'glyphicon-chevron-up':sort.reverse,'glyphicon-chevron-down':!sort.reverse}"></span>
+            </th>
+            <th ng-click="sortBy('title')">Title
+              <span class="glyphicon sort-icon" ng-show="sort.sortingKey=='title'"
+                    ng-class="{'glyphicon-chevron-up':sort.reverse,'glyphicon-chevron-down':!sort.reverse}"></span>
+            </th>
+          </tr>
+          </thead>
+          <tbody>
+          <tr ng-repeat="experience in experiences | orderBy:sort.sortingKey:sort.reverse"
+              ui-sref="experiences.view({experienceId: experience._id})">
+            <td>{{experience.date | date : 'dd/MM/yyyy'}}</td>
+            <td>{{experience.medium.name}}</td>
+            <td>{{experience.title}}</td>
+          </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
-  <div class="alert alert-warning text-center" ng-if="experiences.$resolved && !experiences.length">
+  </div>
+  <div class="alert alert-warning text-center" ng-show="initialCount < 1">
     No experiences yet, why don't you <a ui-sref="experiences.create">create one</a>?
   </div>
 </section>
